# self-learning-machines

./: .gitignore  affine_class.ipynb  analytic.ipynb  analytic.py  analyze_results.ipynb  clamped.cir  clamped.raw  data_sweep_ground_ref.sh  data_sweep_source_ref.sh  design.md  feasible_region.ipynb  framework.py  fully connected.cir  fully_connected.cir  fully_connected.raw  gen_data.ipynb  helpers.py  landscape.ipynb  linear.cir  linear.raw  linear_class.ipynb  linear_classification.ipynb  linear_regression.ipynb  min.cir  min.raw  netlist_gen.py  network_sweep.ipynb  ngspice_benchmark.ipynb  nonlinear_class.ipynb  nonlinear_regression.ipynb  nudge_sweep.sh  opt.py  paper.cir  paper.raw  pyproject.toml  pyspice_playground.ipynb  rand.cir  rand.raw  rand2.cir  rand2.raw  (+24 more)
circuit_classification_utils/: classifiers.py  featurize.py
data/: nonlinear_regression_data.npz  xor_train_data.npz  xor_train_data_no_scale.npz  xor_train_data_scale_0.0.npz  xor_train_data_scale_0.1.npz  xor_train_data_scale_0.2.npz  xor_train_data_scale_0.3.npz  xor_train_data_scale_0.4.npz  xor_train_data_scale_0.5.npz  xor_train_data_scale_0.6.npz  xor_train_data_scale_0.7.npz  xor_train_data_scale_0.8.npz  xor_train_data_scale_0.9.npz  xor_train_data_scale_1.0.npz
experiments/: circuit_classification.ipynb  create_datasets.py  feasible_region.ipynb  landscape.ipynb  network_sweep.ipynb  ngspice_benchmark.ipynb  nonlinear_classification.ipynb  nonlinear_regression.ipynb  optim.ipynb  profiling_baseline.json  profiling_globaldef.json  profiling_globaldef_cache.json  profiling_globaldef_klu.json  (+8 more)
(+4 files in other folders)
