[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}  # Root package points to 'src'

[project]
name = "self-learning-machines"
version = "0.0.1"
description = "Utilities for simulating self-learning machines"
requires-python = ">=3.9"